[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scripts/sceneTransition.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 236.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61, 248 )

[node name="sceneTransition" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="sceneData" type="Area2D" parent="."]
collision_layer = 0

[node name="sceneDataCollider" type="CollisionShape2D" parent="sceneData"]
position = Vector2( 131, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_sceneTransition_body_entered"]
[connection signal="body_entered" from="sceneData" to="." method="_on_sceneData_body_entered"]
